--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4"
+    "react-native": "0.54.4",
+    "react-native-fbsdk": "^0.7.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
