Facebook SDK Android setup

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion "26.0.2"
 
     defaultConfig {
-        applicationId "com.example"
+        applicationId "br.com.example.app"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
